--- a/CircleOfInfluenceTool/wwwroot/index.html
+++ b/CircleOfInfluenceTool/wwwroot/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CircelOfInfluenceTool</title>
+    <title>CircleOfInfluenceTool</title>
     <base href="https://JanTerSchure.github.io/CircleOfInfluenceTool/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <link href="CircelOfInfluenceTool.styles.css" rel="stylesheet" />
+    <link href="CircleOfInfluenceTool.styles.css" rel="stylesheet" />
 </head>
 
 <body>
