--- a/CircleOfInfluenceTool/wwwroot/index.html
+++ b/CircleOfInfluenceTool/wwwroot/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CircleOfInfluenceTool</title>
     <base href="/"/>
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="CircleOfInfluenceTool.styles.css" rel="stylesheet" />
